Closed
Bug 1235152
Opened 10 years ago
Closed 10 years ago
CSS box-decoration-break bug on right-to-left [rtl] languages
Categories
(Core :: Layout: Block and Inline, defect)
Tracking
()
RESOLVED
FIXED
mozilla46
People
(Reporter: gil.goldshlager, Assigned: MatsPalmgren_bugz)
References
()
Details
(Keywords: css3, rtl)
Attachments
(2 files)
38.30 KB,
image/png
|
Details | |
7.33 KB,
patch
|
roc
:
review+
|
Details | Diff | Splinter Review |
User Agent: Mozilla/5.0 (Windows NT 10.0; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/47.0.2526.106 Safari/537.36
Steps to reproduce:
Using CSS box-decoration-break on right-to-left [rtl] languages
Actual results:
The text is off the position to the right, visit the next link in Firefox browser:
http://codepen.io/anon/pen/MKjEyN
Expected results:
The text should stay in the position, open the next link in a webkit browser to see how it works there:
http://codepen.io/anon/pen/MKjEyN
Reporter | ||
Updated•10 years ago
|
![]() |
||
Updated•10 years ago
|
Blocks: 613659
Status: UNCONFIRMED → NEW
status-firefox42:
--- → affected
status-firefox43:
--- → affected
status-firefox44:
--- → affected
status-firefox45:
--- → affected
status-firefox46:
--- → affected
status-firefox-esr38:
--- → affected
status-firefox-esr45:
--- → ?
Ever confirmed: true
Assignee | ||
Updated•10 years ago
|
Assignee: nobody → mats
OS: Windows 10 → All
Assignee | ||
Comment 1•10 years ago
|
||
Attachment #8702074 -
Flags: review?(roc)
Assignee | ||
Comment 2•10 years ago
|
||
Attachment #8702074 -
Flags: review?(roc) → review+
Assignee | ||
Updated•10 years ago
|
Flags: in-testsuite+
Comment 4•10 years ago
|
||
bugherder |
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla46
You need to log in
before you can comment on or make changes to this bug.
Description
•